--- a/generic_DBD_7.html
+++ b/generic_DBD_7.html
@@ -54,7 +54,7 @@
 
                                                                  
 										   <h3><strong>Project Report Objective</strong></h3>
-										   <p><strong>The objective of the first project report required me and my team to position us as IT Software Consultants and Developers, to design, build, and present a logical database for a chosen area of interest in a work environment or public service. You'll produce a detailed design report encompassing various aspects:</strong></p>
+										   <p>The objective of the first project report required me and my team to position us as IT Software Consultants and Developers, to design, build, and present a logical database for a chosen area of interest in a work environment or public service. You'll produce a detailed design report encompassing various aspects:</p>
 
 										   <ul>
 										   <li>
