--- a/generic_DBD_7.html
+++ b/generic_DBD_7.html
@@ -49,7 +49,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Evaluation of the final project (Unit 11) vs. the initial proposal (Unit 6).s</h1>
+										<h1>Evaluation of the final project (Unit 11) vs. the initial proposal (Unit 6)</h1>
 									</header>
 
                                                                  
