--- a/About.html
+++ b/About.html
@@ -83,7 +83,23 @@ A new Landing page has to be created for each option
 											<header class="major">
 												<h3>Work History</h3>
 											</header>
-											<p>Just a snapshot</p>
+											  <h2>Attitude Group – Data Analyst</h2>
+  <p><em>Statistics and Business Intelligence Department (May 2022 - Present)</em></p>
+  <ul>
+    <li>Work collaboratively with business departments to resolve data gaps, build processes, optimize statistical efficiency, and support Digital Transformation Strategy projects.</li>
+    <li>Develop data flows, execute change management activities, and generate informative reports.</li>
+    <li>Perform market research and guest profiling.</li>
+  </ul>
+
+  <h2>Sicom Group - Customer Assistant</h2>
+  <p><em>Pensions and General Insurance (Feb 2021 - Apr 2022)</em></p>
+  <ul>
+    <li>IBNR calculations for identified classes and sub-classes of business.</li>
+    <li>Performing assigned actuarial tasks for the implementation of IFRS 17.</li>
+    <li>Responsible for a portfolio of organizations.</li>
+    <li>Analysis and Consolidation of contributions.</li>
+    <li>Computation of projection of benefits and new pension schemes.</li>
+  </ul>
 										</div>
 									</div>
 								</section>
