--- a/About.html
+++ b/About.html
@@ -83,23 +83,23 @@ A new Landing page has to be created for each option
 											<header class="major">
 												<h3>Work History</h3>
 											</header>
-											  <h2>Attitude Group – Data Analyst</h2>
-  <p><em>Statistics and Business Intelligence Department (May 2022 - Present)</em></p>
-  <ul>
-    <li>Work collaboratively with business departments to resolve data gaps, build processes, optimize statistical efficiency, and support Digital Transformation Strategy projects.</li>
-    <li>Develop data flows, execute change management activities, and generate informative reports.</li>
-    <li>Perform market research and guest profiling.</li>
-  </ul>
+											  <h4>Attitude Group – Data Analyst</h4>
+											   <p><em>Statistics and Business Intelligence Department (May 2022 - Present)</em></p>
+											   <ul>
+  											   <li>Work collaboratively with business departments to resolve data gaps, build processes, optimize statistical efficiency, and support Digital Transformation Strategy projects.</li>
+  											   <li>Develop data flows, execute change management activities, and generate informative reports.</li>
+  											   <li>Perform market research and guest profiling.</li>
+											   </ul>
 
-  <h2>Sicom Group - Customer Assistant</h2>
-  <p><em>Pensions and General Insurance (Feb 2021 - Apr 2022)</em></p>
-  <ul>
-    <li>IBNR calculations for identified classes and sub-classes of business.</li>
-    <li>Performing assigned actuarial tasks for the implementation of IFRS 17.</li>
-    <li>Responsible for a portfolio of organizations.</li>
-    <li>Analysis and Consolidation of contributions.</li>
-    <li>Computation of projection of benefits and new pension schemes.</li>
-  </ul>
+ 											  <h4>Sicom Group - Customer Assistant</h4>
+											   <p><em>Pensions and General Insurance (Feb 2021 - Apr 2022)</em></p>
+											   <ul>
+ 											    <li>IBNR calculations for identified classes and sub-classes of business.</li>
+ 											    <li>Performing assigned actuarial tasks for the implementation of IFRS 17.</li>
+  											   <li>Responsible for a portfolio of organizations.</li>
+  											   <li>Analysis and Consolidation of contributions.</li>
+  											   <li>Computation of projection of benefits and new pension schemes.</li>
+ 											  </ul>
 										</div>
 									</div>
 								</section>
@@ -110,9 +110,19 @@ A new Landing page has to be created for each option
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Benchmark Statement</h3>
+												<h3>Education</h3>
 											</header>
-											<p>(what I know in theory and practice and what I want to learn)</p>
+											  <h4>Institute and Faculty of Actuaries: 2022</h4>
+											    <ul>
+											      <li>CS1 - Actuarial Statistics 1</li>
+											      <li>CS2 - Actuarial Statistics 2</li>
+											      <li>CM1 - Actuarial Mathematics 1</li>
+											      <li>CM2 - Actuarial Mathematics 2</li>
+											      <li>CB2 - Business Economics</li>
+											    </ul>
+
+											    <h4>University of Mauritius: 2017 - 2020</h4>
+											    <p>BSc (Hons), Actuarial Science</p>
 										</div>
 									</div>
 								</section>
