--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -88,7 +88,8 @@
 									              Then, the data must undergo several pre-processing steps to be used and analysed by means of a suitable method, for example, regression or classification for predictions.</p>
 									              <p></p>
 									              <p></p>
-
+									
+										<p></p><a href="Web Scraping.ipynb" download>Click to download Full Document </a><p>
 
 								</div>
 							</section>
@@ -98,10 +99,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
+
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
