--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -89,7 +89,7 @@
 									              <p></p>
 									              <p></p>
 									
-										<p></p><a href="Web Scraping.ipynb" download>Click to download Full Document </a><p>
+										<p></p><a href="Web Scraping.ipynb" download>Click to download notebook for Web Scraping </a><p>
 
 								</div>
 							</section>
