--- a/generic_DBD_5.html
+++ b/generic_DBD_5.html
@@ -243,7 +243,8 @@
                                                                  <p>It also facilitates data analysis and insights generation, enabling the identification of trends, demand prediction, or efficacy of promotions. More specifically, as a person who uses Power BI daily, normalized databases simplify the data model, making it easier to connect various tables and create complex relationships in Power BI. This leads to more meaningful, detailed, and comprehensive visualizations. Also, efficient querying from a well-structured database can lead to faster data refresh times in Power BI, which is critical when dealing with real-time or near-real-time data. </p>  
                                                                  <p>Lastly, it enhances data security by allowing restrictions on tables with sensitive data. In summary, understanding normalization and database design helps a data scientist in the hospitality industry improve data management, efficiency, security, and business insights.</p>
 	
-									
+								 <p></p><a href="Normalisation.ipynb" download>Click to download notebook for Normalisation </a><p>
+								 <p></p><a href="Database Build.ipynb" download>Click to download notebook for Database Build </a><p>	
 									
 								</div>
 							</section>
@@ -253,10 +254,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
+
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
