--- a/generic_DBD_7.html
+++ b/generic_DBD_7.html
@@ -80,8 +80,11 @@
  										 <p>We understood that it is important to apply these principles effectively in a real-world context. In our case, we're dealing with a hotel management database. We used these principles to have informed the structure of your database, linking abstract concepts with tangible outcomes.</p>
  										 <p><strong>Application of Data Management Pipeline:</strong> Another critical aspect to emphasize is the implementation of the data management pipeline within the context of your hotel management database. This involves detailing the steps in the data management pipeline processes, such as data capture, cleaning, and storage, ensure accuracy and reliability as the right database management system selection plays a pivotal role in the HMS's performance, considering factors like storage requirements, user access, and data manipulation and retrieval.</p>
 
-									<p></p><a href="digitalportfolioevaluationform.pdf">PDF for test</a><p>
-									<a href="https://github.com/nolaniyi/sample-portfolio"> A GitHub repository/site</a>
+									<h2>Minutes of Meeting</h2>
+									
+									<p></p><a href="DBD_Meeting Minutes-1.docx">Meeting Notes 1</a><p>
+									<p></p><a href="DBD_Meeting Minutes-2.docx">Meeting Notes 2</a><p>
+
 								</div>
 							</section>
 
