--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<img src="images/pic01.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Launch Module.html" class="link">The Data Professional</a></h3>
+									<h3><a href="Launch Module1.html" class="link">The Data Professional</a></h3>
 									<p>Exploration & Investigation of the Critical Theoretical Concepts in Data Science </p>
 								</header>
 							</article>
@@ -85,7 +85,7 @@
 									<img src="images/pic02.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 2.html" class="link">Numerical Analysis</a></h3>
+									<h3><a href="Module 21.html" class="link">Numerical Analysis</a></h3>
 									<p>More on the foundations of computer science and software development</p>
 								</header>
 							</article>
@@ -102,7 +102,7 @@
 									<img src="images/pic04.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 3.html" class="link">Visualising Data</a></h3>
+									<h3><a href="Module 31.html" class="link">Visualising Data</a></h3>
 								</header>
 							</article>
 							<article>
@@ -110,7 +110,7 @@
 									<img src="images/pic05.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 5.html" class="link">Machine Learning</a></h3>
+									<h3><a href="Module 51.html" class="link">Machine Learning</a></h3>
 								</header>
 							</article>
 							<article>
@@ -118,7 +118,7 @@
 									<img src="images/pic05.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 6.html" class="link">Research Methods and Professional Practice</a></h3>
+									<h3><a href="Module 61.html" class="link">Research Methods and Professional Practice</a></h3>
 								</header>
 							</article>
 							<article>
@@ -126,7 +126,7 @@
 									<img src="images/pic06.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Project.html" class="link">Project</a></h3>
+									<h3><a href="Project1.html" class="link">Project</a></h3>
 									<p>My work on ...... which led to the creation of .....</p>
 								</header>
 							</article>
@@ -164,23 +164,21 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">beelunkhantasweem@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>(000) 000-0000</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<h3>Location</h3>
+										<span>Mauritius</span>
 									</div>
 								</section>
 							</section>
@@ -190,10 +188,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
+
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
