--- a/Module 4.html
+++ b/Module 4.html
@@ -87,7 +87,7 @@ A new Landing page has to be created for each option
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic_DBD_1.html" class="image">
-										<img src="images/module4_pic6.png" alt="" data-position="center center" />
+										<img src="images/module4_ discussion.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -117,7 +117,7 @@ A new Landing page has to be created for each option
 								<section>
 									<a href="generic_DBD_2.html" class="image">
 
-										<img src="images/module4_pic5.PNG"  alt="" data-position="center center" />
+										<img src="images/module4_artefacts.png"  alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -156,7 +156,7 @@ A new Landing page has to be created for each option
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+										<img src="images/module4_evaluation.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
