--- a/generic_DBD_9.html
+++ b/generic_DBD_9.html
@@ -49,31 +49,93 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Collaborative Discussion Forum Summaries</h1>
+										<h1>Professional Skills Matrix and Action Plan</h1>
 									</header>
-									
-									<p>The first discussion was the evaluation of the rationale behind the Internet of Things (IOT) in the context of the article by Huxley et al. (2020), highlighting the opportunities, limitations, risks, and challenges associated with such a large-scale process of data collection.<br />
-									   The Internet of Things (IoT) is a paradigm based on the Internet that comprises of many interconnected technologies in order to exchange information.(Diaz et al., 2016). However, there are several limitations of associated devices in the IoT in terms of storage, network, and computing, as well as the requirements of complex analysis, scalability, and data access. Thus, as mentioned by peers, this necessitates continuous technological advancements and investments, as emphasized by Gartner in 2015.<br />
-									   One of the main challenges is dealing with security issues when performing data cleaning on a large volume of data. Since data cleaning processes must be performed using automated data cleaning tools, inconsistent software may be used that will clean the data based on faulty models and thus decrease the quality of the data and create the possibility of breaches.<br />
-									   Another challenge is that it is even more difficult to protect the data that is stored in the cloud and requires more security tools to protect it from DDoS attacks, ransomware, theft, and other malicious activities. Thus, companies need to invest in big data security and privacy tools to protect their data and understand the newest threats. Failure to do so could result in severe financial losses and other organizational problems, as severe fines and restrictions could be imposed under the GDPR.<br />
-									   In conclusion, IoT data has many prospects for increased decision-making and efficiency, but there are substantial obstacles to efficiently store and clean the data for usage. For the IoT to reach its full potential, reliable, scalable, and secure data cleaning technologies must be created.</p>
-									<p style="color:red;">References:<br />
-									   &nbsp;&nbsp;&nbsp;Aid (2023) Internet of things (IOT) security: Challenges and best practices, Apriorit. Available at: https://www.apriorit.com/white-papers/513-iot-security (Accessed: 16 July 2023). <br />
-									   &nbsp;&nbsp;&nbsp;Díaz, M., Martín, C. and Rubio, B. (2016) ‘State-of-the-art, challenges, and open issues in the integration of internet of things and cloud computing’, Journal of Network and Computer Applications, 67, pp. 99–117. doi:10.1016/j.jnca.2016.01.010. <br />
-									   &nbsp;&nbsp;&nbsp;Gartner (2015). Big Data Hypecycle. Gartner. Available at: https://www.gartner.com/en/products/special-reports [Accessed 16 Jul. 2023].
-									</p>
-									<p>The second discussion is on the comparison of the rules of the GDPR - in particular, with relation to the securing of personal data rule, with either similar compliance laws within your country of residence, or with the ICO in the UK.<br />
-									    With the Data Protection Act 2017 (DPA 2017), Mauritius has aligned its domestic laws with stringent international data protection standards, drawing heavily from the EU's General Data Protection Regulation. The DPA 2017 applies to organizations in Mauritius handling personal data or using local equipment for such processes. Despite many similarities, the DPA 2017 and GDPR differ in aspects of data transfer, notably the definition of "adequate" data protection. Businesses operating internationally must understand these nuances to ensure compliance with all relevant laws.<br />
-								            My peers each discussed on the compliance laws that govern their respective countries namely the General Data Protection Regulation (GDPR) in UK, the German Federal Data Protection Act (BDSG) in Germany, and the Personal Information Protection and Electronic Documents Act (PIPEDA) in Canada. Although they have different purviews, all regulate the protection of personal data. While BDSG has an emphasis on security and adds particular for public and religious organisations, GDPR is comprehensive and covers all data controllers and processors. Public bodies are not covered by PIPEDA, which instead focuses on commercial data use. Each law responds to its jurisdiction, demonstrating that while harmonisation of data protection laws is possible, local variables and specifics have a big impact on how they are created and applied.<br />
-								            Global compliance is an important aspect of avoiding risk and building expansion agility. Understanding these nuances is critical for organizations operating across multiple jurisdictions, aiding in compliance, and fostering a culture of global data privacy and security.<br />
-                                                                        <p style="color:red;">References:<br />
-									   &nbsp;&nbsp;&nbsp;Data Protection & Privacy 2023 - Data Protection & Privacy 2023 - Mauritius | Global Practice Guides | Chambers and Partners. Available at: https://practiceguides.chambers.com/practice-guides/data-protection-privacy-2023/mauritius/trends-and-developments (Accessed: 11 July 2023).<br />
-									   &nbsp;&nbsp;&nbsp;Voigt, P. and Von Dem Bussche, A. (2017). Scope of Application of the GDPR. In: , 9–30. Available from https://link-springer-com.uniessexlib.idm.oclc.org/chapter/10.1007/978-3-319-57959-7_2.<br />
-									   &nbsp;&nbsp;&nbsp;Tremont, D. (2020). The New Germany Privacy Act: BDSG or Bundesdatenschutzgesetz. [online] iltanet.org. Available at: https://www.iltanet.org/blogs/david-tremont/2020/02/06/bdsg-or (Accessed 11 July 2023).<br />
-									   &nbsp;&nbsp;&nbsp;ICO. (nd) ‘A guide to the data protection exemptions’. ICO. Available at: https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/exemptions/a-guide-to-the-data-protection-exemptions/ (Accessed: 11 July 2023). <br />
-								        </p>
-									<p>In conclusion, these collaborative discussions enabled me to better understand effective data wrangling, which involves addressing challenges, managing security risks, and exploiting opportunities, is pivotal to maximizing the benefits of big data. Utilizing appropriate methodologies and tools for data preparation, cleaning, exploration, optimization, and evaluation is essential. Finally, awareness of compliance laws of crucial importance for a country to meet its regulatory obligations. Mastery in these areas enables efficient data management and insightful decision-making, becoming increasingly significant in our data-driven era.
-									</p>	
+									</head>
+									<body>
+									  <h3>Professional Skills Matrix for Deciphering Big Data</h3>
+									  <table>
+									    <tr>
+									      <th>Skill/Competency</th>
+									      <th>Current Proficiency (1-5)</th>
+									      <th>Desired Proficiency (1-5)</th>
+									      <th>Relevance to Role</th>
+									         </tr>
+									         <tr>
+									           <td>Data Cleaning</td>
+									           <td>4</td>
+									           <td>5</td>
+									           <td>Important for maintaining data integrity and reliability</td>
+									         </tr>
+									         <tr>
+									           <td>APIs</td>
+									           <td>2</td>
+									           <td>5</td>
+									           <td>Important for data integration</td>
+									         </tr>
+									         <tr>
+									           <td>Data Mining</td>
+									           <td>4</td>
+									           <td>5</td>
+									           <td>Essential for extracting meaningful patterns from large data sets</td>
+									         </tr>
+									         <tr>
+									           <td>SQL/NoSQL Databases</td>
+ 									          <td>3</td>
+ 									          <td>5</td>
+ 									          <td>Vital for managing and manipulating large datasets</td>
+ 									        </tr>
+									         <tr>
+									           <td>Statistical and Inferential Analysis</td>
+  									         <td>4</td>
+  									         <td>5</td>
+  									         <td>Fundamental to my role as a data scientist</td>
+ 									        </tr>
+									         <tr>
+									           <td>Big Data Tools (e.g., Hadoop, Spark)</td>
+ 									          <td>2</td>
+ 									          <td>5</td>
+ 									          <td>Crucial for dealing with large scale data processing</td>
+									         </tr>
+									         <tr>
+									           <td>Predictive Modelling</td>
+									           <td>3</td>
+									           <td>5</td>
+									           <td>Enables better forecasting and decision-making</td>
+ 									        </tr>
+ 									        <tr>
+  									         <td>Machine Learning</td>
+  									         <td>3</td>
+ 									          <td>5</td>
+ 									          <td>Drives automation and deeper insights from data</td>
+ 									        </tr>
+									         <tr>
+									           <td>Programming (Python, R)</td>
+									           <td>4</td>
+									           <td>5</td>
+ 									          <td>A must-have skill for data manipulation and model building</td>
+									         </tr>
+									         <tr>
+ 									          <td>Data Visualization</td>
+									           <td>4</td>
+									           <td>5</td>
+									           <td>Key for communicating complex data insights to stakeholders</td>
+									         </tr>
+									       </table>
+
+									       <h3>Action Plan (Professional Development Plan)</h3>
+									       <ul>
+									         <li>SQL/NoSQL Databases: Practice more on NO SQL queries</li>
+									         <li>Practice using APIs to gather data from external sources and integrate it into data analysis projects.</li>
+									         <li>Focus on advanced machine learning algorithms and techniques, including supervised and unsupervised learning.</li>
+									         <li>Participate in Kaggle competitions to improve problem-solving skills and collaborate with the data science community.</li>
+									         <li>Big Data Tools: Undertake specialized training in Hadoop and Spark. Practice building and deploying scalable data processing pipelines in these environments in the next months.</li>
+									         <li>Create a Network of contacts by attending data science conferences, seminars, and meetups to expand professional networks and learn from industry experts.</li>
+									         <li>Improve and learn about Leadership Skills to develop leadership and project management skills to lead data science projects effectively.</li>
+									         <li>Engage into Continuous Learning to stay updated with the latest trends and advancements in data science through continuous learning and attending workshops.</li>
+									       </ul>
+									     </body>
+
 								</div>
 							</section>
 
