--- a/Module 5.html
+++ b/Module 5.html
@@ -7,7 +7,7 @@ A new Landing page has to be created for each option
 -->
 <html>
 	<head>
-		<title>Jane Doe</title>
+		<title>Tasweem Beelunkhan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -32,11 +32,11 @@ A new Landing page has to be created for each option
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="About.html">About Me</a></li>
-							<li><a href="Launch Module.html">Launch Module</a></li>
-							<li><a href="Module 2.html">Secure Software Development</a></li>
-							<li><a href="Module 3.html">Object-Oriented Information Systems</a></li>
-							<li><a href="Module 4.html">Network and Information Security Management</a></li>
-							<li><a href="Module 5.html">Software Engineering PM</a></li>
+							<li><a href="Launch Module.html">The Data Professional</a></li>
+							<li><a href="Module 2.html">Numerical Analysis</a></li>
+							<li><a href="Module 4.html">Deciphering Big Data</a></li>
+							<li><a href="Module 3.html">Visualising Data</a></li>
+							<li><a href="Module 5.html">Machine Learning</a></li>
 							<li><a href="Module 6.html">Research Methods and Professional Practice</a></li>
 							<li><a href="Project.html">Project</a></li>
 						</ul>
@@ -50,7 +50,7 @@ A new Landing page has to be created for each option
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Software Engineering Project Management</h1>
+								<h1>Machine Learning</h1>
 							</header>
 							<div class="content">
 								<p>Software Engineering Project Management</p>
@@ -69,9 +69,10 @@ A new Landing page has to be created for each option
 									</header>
 									<p>I will learn:</p>
 									<ul>
-										<li>Dolor etiam magna etiam.</li>
-										<li>Sagittis lorem eleifend.</li>
-										<li>Felis dolore viverra.</li>
+										<li>Learn about the key paradigms and algorithms in machine learning.</li>
+										<li>Get an understanding of data analytics based on machine learning and using modern programming tools, such as Python or R.</li>
+										<li>Experience how machine learning and data analytics can be used in real-world applications.</li>
+										<li>Acquire the ability to gather and synthesise information from multiple sources to aid in the systematic analysis of complex problems using machine learning tools and algorithms.</li>
 									</ul>
 								</div>
 							</section>
