--- a/Module 5.html
+++ b/Module 5.html
@@ -21,7 +21,7 @@ A new Landing page has to be created for each option
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><span>Jane Doe</span></a>
+						<a href="index.html" class="logo"><span>Tasweem Beelunkhan</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -68,11 +68,12 @@ A new Landing page has to be created for each option
 										<h2>Learning Outcomes</h2>
 									</header>
 									<ul>
-										<li>Learn about the key paradigms and algorithms in machine learning.</li>
-										<li>Get an understanding of data analytics based on machine learning and using modern programming tools, such as Python or R.</li>
-										<li>Experience how machine learning and data analytics can be used in real-world applications.</li>
-										<li>Acquire the ability to gather and synthesise information from multiple sources to aid in the systematic analysis of complex problems using machine learning tools and algorithms.</li>
+ 									    <li>Articulate the legal, social, ethical, and professional issues faced by machine learning professionals.</li>
+									    <li>Understand the applicability and challenges associated with different datasets for the use of machine learning algorithms.</li>
+									    <li>Apply and critically appraise machine learning techniques to real-world problems, particularly where technical risk and uncertainty is involved.</li>
+									    <li>Systematically develop and implement the skills required to be effective member of a development team in a virtual professional environment, adopting real-life perspectives on team roles and organisation.</li>
 									</ul>
+
 								</div>
 							</section>
 
