--- a/generic_ML_2.html
+++ b/generic_ML_2.html
@@ -127,7 +127,7 @@
 												<p>For instance, the first car in the dataset is a "chevrolet chevelle malibu" with 18.0 mpg, 8 cylinders, and so forth and the last car is a "chevy s-10" with 31.0 mpg, 4 cylinders.</p>
 												
 												<p>The shape of the df_auto_mpg DataFrame that is the number of rows and columns is determined as shown below:</p>
-												<p><img src="PIC 2" alt="Shape of Dataset"></p>
+												<p><img src="images/ML_Unit2_P1.png" alt="Shape of Dataset"></p>
 												<p>The dataset has 398 rows and 9 columns. That is, there are 398 car entries, each with 9 attributes (mpg, cylinders, displacement, horsepower, weight, acceleration, model year, origin, and car name).</p>
 												
 												<p>Now the <code>describe()</code> function is used to display the basic statistics of the dataset such as the count, mean, standard deviation, minimum, 25th percentile, median, 75th percentile, and maximum for each numerical column.</p>
