--- a/generic_DBD_3.html
+++ b/generic_DBD_3.html
@@ -49,7 +49,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>&#10021; Data cleaning and Transformation</h1>
+										<h1>&#10021; Unit 3: Correlation and Regression</h1>
 										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
 
