--- a/generic_ML_6.html
+++ b/generic_ML_6.html
@@ -49,7 +49,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1> &#10021; Unit 1 - Introduction to Machine Learning (ML) </h1>
+										<h1> &#10021; Unit 6: Clustering with Python </h1>
 										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
 
