--- a/generic_ML_4.html
+++ b/generic_ML_4.html
@@ -161,6 +161,8 @@
 										        <li>Weisberg, S. (2014) <i>Applied linear regression</i>. Wiley.</li>
 										    </ul>
 
+
+								<p></p><a href="Unit 4- Linear Regression with Scikit-Learn.ipynb" download>Click to download notebook for Linear Regression with Scikit-Learn </a><p>
 									
 								</div>
 							</section>
