--- a/generic_ML_8.html
+++ b/generic_ML_8.html
@@ -135,7 +135,7 @@
 
 
 
-									<p></p><a href="UNIT8 -Gradient descent Cost function .ipynb" download>Click to download notebook for Gradient descent Cost function Experiment code </a><p>
+									<p></p><a href="UNIT8 -Gradient descent Cost function .ipynb" download>Click to download notebook for Gradient descent Cost function Experiment </a><p>
 										
 								</div>
 							</section>
