--- a/Module 5.html
+++ b/Module 5.html
@@ -138,7 +138,7 @@ A new Landing page has to be created for each option
 												<li><a href="generic_ML_3.html" class="button">More Information here</a></li>
 											</ul>
 											
-											<h4>uNIT 4 - Linear Regression with Scikit-Learn </h4>
+											<h4>Unit 4 - Linear Regression with Scikit-Learn </h4>
 		                                                        		<ul class="actions">
 												<li><a href="generic_ML_4.html" class="button">More Information here</a></li>
 											</ul>
