--- a/generic_ML_10.html
+++ b/generic_ML_10.html
@@ -83,8 +83,10 @@
 											    <li>Visualisation: As the approach's culmination, this stage involves charting the resultant activations, providing a deep insight into the model's fundamental cognitive operations.</li>
 											</ul>
 											<img src="images/ML_Unit10_P3.png" alt="Visualization 1">
+								                	<p></p>
 											<img src="images/ML_Unit10_P4.png" alt="Visualization 2">
 											<img src="images/ML_Unit10_P5.png" alt="Visualization 3">
+							      		                <img src="images/ML_Unit10_P6.png" alt="Visualization 3">
 											<p>The results show that:</p>
 											<ol>
 											    <li>By examining the feature maps produced by different layers (early layers, intermediate layers, and deeper layers), we can observe how the model processes and recognizes features at varying depths of the network.</li>
