--- a/generic_ML_10.html
+++ b/generic_ML_10.html
@@ -112,6 +112,11 @@
 											    <li>Ketkar, N. and Moolayil, J. (2021) <i>Deep learning with python</i> [Preprint]. doi:10.1007/978-1-4842-5364-9.</li>
 											</ul>
 
+
+							<p></p><a href="Unit 10 CNN Interactive Learning.ipynb" download>Click to download notebook for Unit 10 CNN Interactive Learning </a><p>  
+									
+
+
 									
 								</div>
 							</section>
