--- a/Module 5.html
+++ b/Module 5.html
@@ -94,18 +94,21 @@ A new Landing page has to be created for each option
 											<div>
                                                                                             <h3>The module comprises of 2 Collaborative Discussions:</h3>
                                                                                             <ul>
-                                                                                                <li>Unit 1-3 - Collaborative Discussion 1 - The Data Collection Process</li>
-                                                                                                <li>Unit 8-10 - Collaborative Discussion 2 - Comparing Compliance Laws</li>
+                                                                                                <li>Unit 1-3 - Collaborative Discussion 1 - The 4th Industrial Revolution</li>
+                                                                                                <li>Unit 8-10 - Collaborative Discussion 2 - Legal and Ethical views on ANN applications</li>
                                                                                             </ul>
                                                                                             <h3>Both have 2 main learning outcomes:</h3>
                                                                                             <ul>
-                                                                                            <li>Critically analyse data wrangling problems and determine appropriate methodologies, tools, and techniques (involving preparing, cleaning, exploring, creating, optimising, and evaluating big data) to solve them.</li>
-                                                                                            <li>Identify and manage challenges, security issues and risks, limitations, and opportunities in data wrangling.</li>
+                                                                                            <li>Understand the applicability and challenges associated with different datasets for the use of machine learning algorithms.</li>
+                                                                                            <li>Systematically develop and implement the skills required to be an effective member of a development team in a virtual professional environment, adopting real-life perspectives on team roles and organisation.</li>
+                                                                                            <li>Apply and critically appraise machine learning techniques to real-world problems, particularly where technical risk and uncertainty is involved</li>
+												
+												    
                                                                                             </ul>
                                                                                          </div>
 
 											<ul class="actions">
-												<li><a href="generic_ML_1.html" class="button">Learn more</a></li>
+												<li><a href="generic_ML_CD.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
