--- a/generic_ML_CD.html
+++ b/generic_ML_CD.html
@@ -52,7 +52,7 @@
 										<h1>Collaborative Discussion Forum Summaries</h1>
 									</header>
 									
-									<p style="color:red;">Summary of first discussion:<br />									
+									  <h2> &#10021;Summary of first Collaborative Discussion: </h2>									
 									<p>A new age of innovation has begun across several industries with the introduction of Industry 4.0, which is characterised by the seamless integration of technologies like AI, IoT, and automation (Wollschlaeger,2017). This change promises increased effectiveness, flexibility, and a move towards more user-centric experiences. But these novel prospects also present difficulties. Sectors struggle as they develop to strike a delicate balance between fast innovation, security concerns, and the requirement for real-time monitoring.</p>
 									<p>The initial post and the discussions highlight Industry 4.0's significant impact on the automotive and public transportation sectors. While smart manufacturing in the automotive industry improves efficiency and user experience, it also brings cybersecurity challenges (McKinsey,2020). Similarly, despite tech advancements in public transportation increasing reliability, events like the Kowloon signal failure underline the need for constant monitoring. Addressing issues like the Jeep Cherokee hack necessitates stringent cybersecurity methods, continuous oversight, and collaborative efforts. Balancing technological progress with security is essential for the industry's growth.</p>
 									<p>Also, one interesting point mentioned by my colleagues was the innovations that have optimized trading through algorithmic methods, ensured transaction transparency, and improved customer experiences. However, these advancements also pose challenges, including concerns over market equity, privacy risks with Big Data, regulatory complexities with Blockchain, and potential AI-induced job losses as indicated by Schwab and Zahidi, 2020. While Industry 4.0 provides remarkable opportunities in trading, it necessitates a judicious approach to address associated risks, from legal implications to socio-economic impacts.</p>
@@ -66,7 +66,7 @@
 									   &nbsp;&nbsp;&nbsp;Schwab, K. and Zahidi, S. (2020) The Future of Jobs Report 2020, World Economic Forum. Available at: https://www.weforum.org/reports/the-future-of-jobs-report-2020 (Accessed: 20 September 2023).
 									</p>
 
-									<p style="color:red;">Summary of second discussion:<br />	
+									 <h2> &#10021;Summary of second Collaborative Discussion: </h2>	
 
 									<p>The rise of AI, particularly generative models like GPT-3, is transforming the writing industry, causing both admiration and concern. While GPT-3 can produce human-like content, it may not fully understand the content it generates, leading to nonsensical or harmful outputs (Hutson, 2021). The potential for AI to perpetuate societal biases in training data is a critical issue. Professional writers fear job losses and decreased earnings due to AI, with the Writers Guild in the UK highlighting the need to safeguard their interests. Additionally, there is a growing sentiment that AI lacks the emotional depth and nuance of human-generated content.</p>
 									<p>Discussions from my colleagues further emphasised the benefits and implications of AI writers in the academic world. It has been unanimous that while the potential benefits of AI in education are undeniable, there are pressing concerns to address. and educators and students need to find a balance between embracing AI tools and preserving the authenticity of human-generated content.</p>
@@ -81,7 +81,9 @@
 									   &nbsp;&nbsp;&nbsp;What do we do about the biases in ai? (2022) Harvard Business Review. Available at: https://hbr.org/2019/10/what-do-we-do-about-the-biases-in-ai (Accessed: 26 October 2023). <br />
 								           &nbsp;&nbsp;&nbsp;TELUS International (2023) Generative AI hallucinations: Explanation and prevention, Generative AI Hallucinations: Explanation and Prevention | TELUS International. Available at: https://www.telusinternational.com/insights/ai-data/article/generative-ai-hallucinations (Accessed: 26 October 2023). <br />
 								    	  </p>  
+
 									
+									 <h2> &#10021;Reflection: </h2>										
 									<p>Reflecting on the discussions presented, as a data scientist with an emphasis on the hospitality sector, I find the implications of Industry 4.0 and AI's evolving role in content creation particularly intriguing.The hospitality sector is poised to benefit greatly from Industry 4.0 and AI's role in content creation. These technologies can enhance service delivery, customer experiences, and operational efficiency. However, challenges arise, such as ensuring content authenticity and copyright issues. In the hospitality sector, brand narratives and genuine customer interactions are crucial. AI-generated content must be authentic to avoid misrepresentation or legal entanglements. Protecting input data used for training AI models and outputs is essential to avoid legal entanglements and maintain brand authenticity. A balanced approach is needed to harness the strengths of these technologies while navigating challenges for sustainable growth and trust in the sector.
 									</p>	
 								</div>
