--- a/Module 5.html
+++ b/Module 5.html
@@ -190,7 +190,22 @@ A new Landing page has to be created for each option
 									</div>
 								</section>
 
-
+								<section>
+									<a>
+										<img src="images/module4_evaluation.png" alt="" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h2>Evaluation of the final project (Unit 11) vs. the initial proposal (Unit 6). </h2>
+												<p>Team Minutes</p>
+											</header>
+											<ul class="actions">
+												<li><a href="generic_DBD_7.html" class="button">For details, see here</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 								
 							</section>
 						<!-- Three -->
