--- a/Module 5.html
+++ b/Module 5.html
@@ -83,6 +83,9 @@ A new Landing page has to be created for each option
                                                         					
 							<section id="two" class="spotlights">
 								<section>
+										<a href="generic_ML_1.html" class="image">
+										<img src="images/module4_ discussion.png" alt="" data-position="center center" />
+									</a>
 
 									<div class="content">
 										<div class="inner">
@@ -115,8 +118,7 @@ A new Landing page has to be created for each option
 								<section>
 									<a>
 
-										<img src="images/module4_artefacts.png"  alt="" data-position="center center" />
-									</a>
+
 									<div class="content">
 										<div class="inner">
 											<header class="major">
