--- a/generic_ML_3.html
+++ b/generic_ML_3.html
@@ -81,7 +81,7 @@
 												    <li><b>Evaluating Trends:</b> Regression models can detect and highlight underlying trends in data.</li>
 												</ul>
 									
-									 <h3>ACTIVITY</h3>
+									 <h3> E-Portfolio activity</h3>
 												
 												<p><b>Example 1:</b></p>
 												<p>The Covariance measures the directional relationship between the two variable's deviations from their mean and the Pearson's correlation coefficient measures the linear relationship between two datasets.</p>
