--- a/generic_ML_5.html
+++ b/generic_ML_5.html
@@ -63,7 +63,7 @@
 										    <p>Furthermore, several optimisation strategies and assessment criteria have been put forth to improve K-means' performance and offer a more perceptive assessment of the clusters that are produced. These include using global optimisation methods, optimising the initialization of cluster centroids, and using metrics like separation, cohesion, and the silhouette approach for a more thorough assessment of the clustering outcomes.</p>
 
 
-								    <h3 style="color: #CFA7F6;">ACTIVITY:</h3>
+								    <h3 style="color: #CFA7F6;"> E-Portfolio activity:</h3>
 										<p>The table shows the pathological test results for three individuals:</p>
 										
 										<table>
