--- a/generic_ML_7.html
+++ b/generic_ML_7.html
@@ -68,7 +68,7 @@
 
 
 
-									        <h3 style="color: #CFA7F6;">Perceptron Examples:</h3>
+									        <h3 style="color: #CFA7F6;"> E-Portfolio activity:Perceptron Examples:</h3>
 
 											<h3>EXAMPLE 1: SIMPLE PERCEPTRON</h3>
 											<p>Dr. Mike Lakoju's notebook discusses the implementation of a simple perceptron using the Numpy library, emphasizing the need for optimization when dealing with extensive datasets in neural networks. The notebook begins by defining inputs as Numpy arrays with two values: 45 and 25, which are foundational data points for the perceptron. The type and structure of these inputs are verified, and their first value is confirmed as 45. The weights associated with these inputs are defined as Numpy arrays with values 0.7 and 0.1, which are validated as 0.7.</p>
