--- a/generic_RD_1.html
+++ b/generic_RD_1.html
@@ -71,6 +71,8 @@
 									        <p>Ethical considerations are highlighted across three primary dimensions: conducting research with integrity, managing participant involvement responsibly, and presenting results truthfully. Key points include the necessity of conducting research with honesty, respecting copyright, and intellectual property, being open to critique, and maintaining accuracy and honesty with all stakeholders involved.</p>
 									        <p>Particularly when projects involve participants, especially vulnerable groups, ethical concerns intensify. The need for obtaining ethical clearance, respecting data protection laws (such as the UK's Data Protection Act of 1998), ensuring informed consent, and addressing confidentiality and security of data are paramount.</p>
 									   
+									        <h3 style="color: #CFA7F6;">Reflective activity - Ethics in Computing:</h3>
+
 									
 									        <h3 style="color: #CFA7F6;">Reflection & Practical Use:</h3>
 										<p>Reflecting on the interconnectedness of reasoning in research, ethical considerations, and the evolution of legal systems, one cannot help but appreciate the profound depth and intricacy inherent in the pursuit of knowledge and the administration of justice. The intellectual journey of research—whether it be in computer science or another field—requires a balance of inductive and deductive reasoning, a process deeply rooted in personal epistemology and ontology. It’s a delicate dance between what is observed and what is inferred, with each step guided by prior knowledge and the ethical imperative to conduct and present research with integrity.</p>
