--- a/generic_RM_2.html
+++ b/generic_RM_2.html
@@ -49,7 +49,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1> &#10021; 	Unit 2: Research Questions, the Literature Review and the Research Proposal </h1>
+										<h1> &#10021; Unit 2: Research Questions, the Literature Review and the Research Proposal </h1>
 										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
 
