--- a/generic_RM_8.html
+++ b/generic_RM_8.html
@@ -261,7 +261,7 @@
 
 									
 
-									<h3 style="color: #CFA7F6;">Refelction:</h3>
+									<h3 style="color: #CFA7F6;">Reflection:</h3>
 
 
 												<p>In the hospitality industry, where operational excellence and guest satisfaction are paramount, the application of inferential statistics is critical. The "Unit 8: Inferential Statistics" module has endowed me with the necessary skills to navigate through complex data, understand variability, and apply statistical inference. This knowledge is particularly pertinent when analyzing diverse data types, from ordinal guest satisfaction ratings to nominal cuisine preferences, and quantitative financial metrics.</p>
