--- a/generic_RM_15.html
+++ b/generic_RM_15.html
@@ -52,7 +52,7 @@
 										<h1>Evaluation of the Literature Review and Research Proposal</h1>
 									</header>
 
-												<h2>A. Literature Review</h2>
+												<h2> &#10021;A. Literature Review</h2>
 												    <h3>Comments for Literature Review:</h3>
 												    <p>Thank you for your submission of your literature review, which ideally builds on the draft and formative feedback provided (if you have submitted one for comment) and on the materials covered in the literature review unit.</p>
 												    <p>As you know, the assignment is marked according to a few components, such as your overall understanding of the topic and a clear outline of your own research, the degree of coverage of the current debate, and the quality and structure of the LR itself.</p>
@@ -73,7 +73,7 @@
 												    <p>The suggestion to deepen the discussion around sector-specific challenges in sentiment analysis has opened my eyes to the importance of linking theoretical insights to practical applications. This approach will not only enrich my literature review but also enhance the relevance and impact of my upcoming project work. Emphasizing clearer research questions and a more incisive conclusion will help sharpen my project's focus, enabling me to communicate my findings more effectively and persuasively.</p>
 												    <p>Moreover, the feedback underscores the significance of a well-structured presentation and rigorous research, reaffirmed by a satisfactory Turnitin score that reflects the originality of my work. This bolsters my confidence in adhering to high academic standards, which is critical as I embark on the project module. These lessons in balancing detailed analysis with concise presentation, articulating clear research objectives, and drawing potent conclusions will be instrumental in guiding my project's development, ensuring it is both substantive and impactful. As I reflect on this feedback, I am motivated to integrate these insights into my project module, viewing them as essential stepping stones towards achieving academic excellence and contributing meaningfully to my field.</p>
 												    
-												    <h2>B. Research Proposal</h2>
+												    <h2> &#10021; B. Research Proposal</h2>
 												    <h3>Comments for Research Proposal</h3>
 												    <p>Thank you for the submission of your research proposal.</p>
 												    <p>The assignment required a PPT presentation in a video format of your choice, covering the main points of a proposal, and namely, RQs, methodology, and some pointers to the theoretical framework underpinning your research. You had the opportunity to submit a draft for formative feedback, and I do hope you made good use of the possibility.</p>
