--- a/generic_RM_15.html
+++ b/generic_RM_15.html
@@ -59,15 +59,15 @@
 												    <p>I think you did a fine job with your LR. Below you can find some specific comments.</p>
 												    <h4>1. Knowledge and Understanding</h4>
 												    <p>The word demonstrates a well-developed ability to provide a critical discussion.</p>
-												    <p>Your ideas are structured and coherent, and the historical background was effective, although maybe too long for an overall 2,000 word LR.</p>
-												    <p>While you offered a good identification of the aims, the research questions could have been made more explicit to inform the narrative in a more convincing way.</p>
+												    <br>Your ideas are structured and coherent, and the historical background was effective, although maybe too long for an overall 2,000 word LR.
+												    <br>While you offered a good identification of the aims, the research questions could have been made more explicit to inform the narrative in a more convincing way.</p>
 												    <h4>2. Critical discussion & Contribution</h4>
 												    <p>The review addressed the limitations and presented a coherent timeline, well done. Offering some additional insights into the challenges of the adoption of models in sentiment analysis in connection to the sector practices would have been even more convincing.</p>
 												    <h4>3. Structure and Presentation</h4>
-												    <p>The literature consulted is substantial and demonstrates evidence of wider reading in the discipline. You structured your review well, with a good introduction, an attempt to analyse the literature, an articulated section on challenges and future trends (good) and conclusions, which could have been made more incisive.</p>
-												    <p>Harvard System has been correctly used.</p>
-												    <p>Your Turnitin score of 51% and an analysis of the turnitin report suggest an original assignment (the high score was due to the literature).</p>
-												    <p>Good job! You certainly understood how to carry out a literature review.</p>
+												    <p>The literature consulted is substantial and demonstrates evidence of wider reading in the discipline. You structured your review well, with a good introduction, an attempt to analyse the literature, an articulated section on challenges and future trends (good) and conclusions, which could have been made more incisive.
+												    <br>Harvard System has been correctly used.</p>
+												    <p>Your Turnitin score of 51% and an analysis of the turnitin report suggest an original assignment (the high score was due to the literature).
+												    <br>Good job! You certainly understood how to carry out a literature review.</p>
 												    <h3>Reflection on Comments:</h3>
 												    <p>Reflecting on the feedback received for my literature review, I'm heartened by the recognition of my critical engagement and coherent structure, alongside constructive critiques that pinpoint areas for refinement. The advice to balance content more judiciously, particularly by streamlining the historical background to allocate more space for explicit research questions, is a key takeaway that I intend to apply immediately. This guidance is not just pertinent for the review but is invaluable as I advance into my project module.</p>
 												    <p>The suggestion to deepen the discussion around sector-specific challenges in sentiment analysis has opened my eyes to the importance of linking theoretical insights to practical applications. This approach will not only enrich my literature review but also enhance the relevance and impact of my upcoming project work. Emphasizing clearer research questions and a more incisive conclusion will help sharpen my project's focus, enabling me to communicate my findings more effectively and persuasively.</p>
@@ -82,8 +82,8 @@
 												    <p>The assignment required a PPT presentation in a video format of your choice, covering the main points of a proposal, and namely, RQs, methodology, and some pointers to the theoretical framework underpinning your research. You had the opportunity to submit a draft for formative feedback, and I do hope you made good use of the possibility.</p>
 												    <p>This was a good presentation. Below you will find a breakdown of the grade:</p>
 												    <h4>1. Knowledge and Understanding</h4>
-												    <p>You demonstrated a quite good understanding of the chosen topic.</p>
-												    <p>All the key sections of the presentation are present but not all are equally developed. The background could have been expanded. There is uneven evidence of critical analysis in the key sections of the presentation and could have been more thorough.</p>
+												    <p>You demonstrated a quite good understanding of the chosen topic.
+												    <br>All the key sections of the presentation are present but not all are equally developed. The background could have been expanded. There is uneven evidence of critical analysis in the key sections of the presentation and could have been more thorough.</p>
 												    <h4>2. Presentation and Communication Skills</h4>
 												    <p>The research questions were set clearly and along with the aims and objectives.</p>
 												    <h4>3. Criticality</h4>
