--- a/generic_RM_15.html
+++ b/generic_RM_15.html
@@ -58,7 +58,7 @@
 												    <p>As you know, the assignment is marked according to a few components, such as your overall understanding of the topic and a clear outline of your own research, the degree of coverage of the current debate, and the quality and structure of the LR itself.</p>
 												    <p>I think you did a fine job with your LR. Below you can find some specific comments.</p>
 												    <h4>1. Knowledge and Understanding</h4>
-												    <p>The word demonstrates a well-developed ability to provide a critical discussion.</p>
+												    <p>The word demonstrates a well-developed ability to provide a critical discussion.
 												    <br>Your ideas are structured and coherent, and the historical background was effective, although maybe too long for an overall 2,000 word LR.
 												    <br>While you offered a good identification of the aims, the research questions could have been made more explicit to inform the narrative in a more convincing way.</p>
 												    <h4>2. Critical discussion & Contribution</h4>
