--- a/Module 6.html
+++ b/Module 6.html
@@ -80,8 +80,8 @@ A new Landing page has to be created for each option
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<a href="generic_ML_1.html" class="image">
+										<img src="images/module4_ discussion.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
