--- a/generic_RM_4.html
+++ b/generic_RM_4.html
@@ -80,34 +80,34 @@
 									
 									<h3 style="color: #CFA7F6;">Formative activities: Literature Review Outline</h3>	
 
-											    <p><strong>Project Title:</strong> Brief mention (10 words)</p>
-											    <p><strong>Significance to Discipline:</strong> Expand on the contribution to sentiment analysis and machine learning (140 words)</p>
-											    <p><strong>Alignment with MSc Major:</strong> Explanation of how the project meets MSc requirements (150 words)</p>
-											    <p><strong>Research Problem and Question:</strong></p>
+											    <p>1. <strong>Project Title:</strong>Brief mention (10 words)</p>
+											    <p>2. <strong>Significance to Discipline:</strong>Expand on the contribution to sentiment analysis and machine learning (140 words)</p>
+											    <p>3. <strong>Alignment with MSc Major:</strong>Explanation of how the project meets MSc requirements (150 words)</p>
+											    <p>4. <strong>Research Problem and Question</strong></p>
 											    <ul>
 											        <li>Brief overview of the issue (80 words)</li>
 											        <li>Presentation and justification of the chosen question(s) (120 words)</li>
 											    </ul>
-											    <p><strong>Aims and Objectives:</strong></p>
+											    <p>5. <strong>Aims and Objectives</strong></p>
 											    <ul>
 											        <li>Clear statement of the aims (50 words)</li>
 											        <li>Expanded and SMART objectives, excluding literature review as an objective (150 words)</li>
 											    </ul>
-											    <p><strong>Literature Review:</strong> Overview of existing research, highlighting gaps your project addresses (400 words)</p>
-											    <p><strong>Methodology and Research Design:</strong></p>
+											    <p>6. <strong>Literature Review:</strong>Overview of existing research, highlighting gaps your project addresses (400 words)</p>
+											    <p>7. <strong>Methodology and Research Design</strong></p>
 											    <ul>
 											        <li>Detailing of chosen methods and tools (150 words)</li>
 											        <li>Explanation of why these methods are suited to your aims (150 words)</li>
 											    </ul>
-											    <p><strong>Ethical Considerations and Risk Assessment:</strong></p>
+											    <p>8. <strong>Ethical Considerations and Risk Assessment</strong></p>
 											    <ul>
 											        <li>Ethical issues and how they will be addressed (100 words)</li>
 											        <li>Identification and mitigation strategies (100 words)</li>
 											    </ul>
-											    <p><strong>Artefact Description (If Applicable):</strong> Brief description of any artefacts that will be created (100 words)</p>
-											    <p><strong>Timeline and Project Planning:</strong> Presentation of a realistic timeline using a Gantt Chart or similar tool (200 words)</p>
-											    <p><strong>Visuals and Presentation Aids:</strong> Brief mention of the types of visuals and how they will be used (50 words)</p>
-											    <p><strong>Conclusion:</strong> Concise summary of the proposal and its potential impact (50 words)</p>
+											    <p>9. <strong>Artefact Description (If Applicable):</strong>Brief description of any artefacts that will be created (100 words)</p>
+											    <p>10. <strong>Timeline and Project Planning:</strong>Presentation of a realistic timeline using a Gantt Chart or similar tool (200 words)</p>
+											    <p>11. <strong>Visuals and Presentation Aids:</strong>Brief mention of the types of visuals and how they will be used (50 words)</p>
+											    <p>12. <strong>Conclusion:</strong>Concise summary of the proposal and its potential impact (50 words)</p>
 
 								
 									<p></p>
